# organice will not reflow if there's hard-wrapped content
# -*- eval: (auto-fill-mode 0) -*-

* General

All user visible changes to organice will be documented in this file.

When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.

* [2026-02-11 Wed]

** Added

*** Harmonize modals for managing headers
    - For capture templates, the '+' button or editing a header, now all modals have the same functionality
    - Removes the old TitleEditorModal and DescriptionEditorModal components
    - PR: https://github.com/200ok-ch/organice/pull/1099

* [2026-02-10 Mon]

** Fixed

*** Theme/color scheme flash on startup
    - Fixed a bug where the app would briefly show dark mode before switching to the configured light mode
    - The color scheme is now applied immediately from localStorage before React renders, eliminating the visual flash

*** Capture template crash when used before sync completes
    - Fixed a crash where opening a capture template immediately after starting organice could cause the entire UI to go blank
    - This happened because settings reloading from the sync backend regenerated template IDs, invalidating the open modal's reference

* [2026-01-08 Thu]

** Added

*** UI for editing slash syntax in SCHEDULED timestamp repeaters
    - When editing a SCHEDULED timestamp with a repeater, you can now set a deadline range using the slash syntax (e.g., =.+2d/3d=)
    - This means "do this task at most every 2 days, but at least every 3 days"
    - The slash UI only appears for SCHEDULED timestamps, not DEADLINE timestamps
    - The deadline part can be removed by setting the value to 0
    - Upstream documentation: https://orgmode.org/manual/Tracking-your-habits.html
    - The parser already supported this syntax, but now you can edit it visually in the timestamp editor

* [2026-01-07 Tue]

** Added

*** Org Habits consistency graph
    - Visual consistency graph showing habit completion over time