@@ -182,6 +182,15 @@ Checkboxes:
   - [X] 1. 2
 - [X] 2
 
+** Auto-continuation
+
+When editing a description, lists are automatically continued when you press Enter:
+
+- Type =- item= and press Enter → the next line starts with =- =
+- Type =1. item= and press Enter → the next line starts with =2. =
+
+To stop the list, press Enter on an empty list prefix (the auto-generated =- = or =2. = is removed).
+
 ** Editing workflow
 
 First, create the first list item by editing the description of a header. When you close the "edit description" modal, you can manipulate the list item with native list manipulation functions. The UX is analogous to manipulating a header. Here's what you can do:
